# nvim-buddy

./: Cargo.toml  README.md  lazy-config-example.lua
lua/nvim-buddy/: backend.lua  context.lua  init.lua  picker.lua
src/: main.rs
