[package]
name = "nvim-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
